cpp/clock/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.007s
user	0m0.000s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
[ 25%] Building CXX object CMakeFiles/clock.dir/clock_test.cpp.o
[ 50%] Building CXX object CMakeFiles/clock.dir/clock.cpp.o
[ 75%] Building CXX object CMakeFiles/clock.dir/test/tests-main.cpp.o
[100%] Linking CXX executable clock
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
[100%] Built target clock
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
===============================================================================
All tests passed (50 assertions in 3 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
[100%] Built target test_clock
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex '^.*(tests-main|CompilerId).*[.](gcda|gcno)$' -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/clock.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/clock.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex '^.*[.](gcda|gcno)$'
./build/CMakeFiles/clock.dir/clock_test.cpp.gcno
./build/CMakeFiles/clock.dir/clock.cpp.gcno
./build/CMakeFiles/clock.dir/clock.cpp.gcda
./build/CMakeFiles/clock.dir/clock_test.cpp.gcda

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
clock.cpp                                     28      28   100%   
clock_test.cpp                                26      26   100%   
test/catch.hpp                                45      36    80%   1580-1581,1628,1630,1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         99      90    90%
------------------------------------------------------------------------------
lines: 90.9% (90 out of 99)
branches: 48.3% (87 out of 180)

real	0m12.109s
user	0m10.896s
sys	0m1.205s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.205s
user	0m0.123s
sys	0m0.061s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.422s
user	0m0.310s
sys	0m0.100s

===============================================================================

Running: clang-format-16 -style=file -i ./clock.cpp ./clock_test.cpp ./clock.h

real	0m0.074s
user	0m0.021s
sys	0m0.030s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./clock.cpp ./clock_test.cpp ./clock.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
In file included from /home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock.h:4:
/usr/include/boost/format.hpp:17:10: fatal error: 'vector' file not found
#include <vector>
         ^~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock.h.

real	0m2.735s
user	0m2.582s
sys	0m0.153s


real	0m2.737s
user	0m2.583s
sys	0m0.154s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
38145 warnings generated.
85965 warnings generated.
95235 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock.h.
Suppressed 95235 warnings (95230 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m15.756s
user	0m15.619s
sys	0m0.135s
Running: clang-tidy-16 ./clock.cpp ./clock_test.cpp ./clock.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock_test.cpp:18:18: warning: variable 'timeCases' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
vector<timeTest> timeCases = {
                 ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock_test.cpp:49:17: warning: variable 'addCases' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
vector<addTest> addCases = {
                ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock_test.cpp:81:19: warning: variable 'equalCases' is non-const and globally accessible, consider making it const [cppcoreguidelines-avoid-non-const-global-variables]
vector<equalTest> equalCases = {
                  ^
/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock_test.cpp:181:10: warning: variable 't' of type 'timeTest' can be declared 'const' [misc-const-correctness]
    for (timeTest t : timeCases) {
         ^
                  const 
/home/vpayno/git_vpayno/exercism-workspace/cpp/clock/clock_test.cpp:181:19: warning: variable name 't' is too short, expected at least 3 characters [readability-identifier-length]
    for (timeTest t : timeCases) {
                  ^
/usr/include/boost/format.hpp:17:10: error: 'vector' file not found [clang-diagnostic-error]
#include <vector>
         ^~~~~~~~


real	0m15.757s
user	0m15.621s
sys	0m0.137s

===============================================================================

